--- a/TestHR.Web/Areas/Admin/Views/Attendance/Index.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Attendance/Index.cshtml
@@ -8,9 +8,9 @@
     <link href="~/Plugins/datatables/css/jquery.dataTables.min.css" rel="stylesheet">
     <main class="mn-inner">
         <div class="row">
-            <div class="col s12">
+            @*<div class="col s12">
                 <div class="page-title">Attendance List</div>
-            </div>
+            </div>*@
             <div class="col s12 m12 l12">
                 <div class="card">
                     <div class="card-content">
