--- a/TestHR.Web/Areas/Admin/Views/Employee/Index.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Employee/Index.cshtml
@@ -8,13 +8,19 @@
     <link href="~/Plugins/datatables/css/jquery.dataTables.min.css" rel="stylesheet">
     <main class="mn-inner">
         <div class="row">
-            <div class="col s12">
+            @*<div class="col s12">
                 <div class="page-title">Employee List</div>
-            </div>
+            </div>*@
             <div class="col s12 m12 l12">
                 <div class="card">
                     <div class="card-content">
-                        <span class="card-title">Employee</span>
+                        <div class="row">
+                            <span class="card-title col s4">Employee Information</span>
+                            <span class="col s3 offset-m5 pull-right">
+                                <a href="@Url.Action("Add", "Employee", new { })" class="btn btn-default btn-group-sm">Add</a>
+                                <a href="@Url.Action("Excel", "Employee", new { })" class="btn btn-default btn-group-sm">Excel</a>
+                            </span>
+                        </div>
                         <table id="employeeList" class="display responsive-table datatable-example">
                             <thead>
                                 <tr>
