--- a/TestHR.Web/Areas/Admin/Views/LeaveApplication/Add.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/LeaveApplication/Add.cshtml
@@ -6,14 +6,19 @@
 
 <main class="mn-inner">
     <div class="row">
-        <div class="col s12">
+        @*<div class="col s12">
             <div class="page-title">Blank Page</div>
-        </div>
+        </div>*@
         <div class="col s12">
             <div class="card">
                 <div class="card-content">
                     <form method="post" action="/Admin/LeaveApplication/Add">
-                        <span class="card-title">Leave Application</span><br>
+                        <div class="row">
+                            <span class="card-title col s2">New Leave</span>
+                            <span class="col s2 offset-m8 pull-right">
+                                <a href="@Url.Action("Index", "LeaveApplication", new { })" class="btn btn-default btn-group-sm">Leave List</a>
+                            </span>
+                        </div>
                         <div class="row">
                             <div class="row">
                                 <div class="input-field col s6">
