--- a/TestHR.Web/Areas/Admin/Views/LeaveApplication/Index.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/LeaveApplication/Index.cshtml
@@ -7,13 +7,18 @@
     <link href="~/Plugins/datatables/css/jquery.dataTables.min.css" rel="stylesheet">
     <main class="mn-inner">
         <div class="row">
-            <div class="col s12">
+            @*<div class="col s12">
                 <div class="page-title">Leave Applications</div>
-            </div>
+            </div>*@
             <div class="col s12 m12 l12">
                 <div class="card">
                     <div class="card-content">
-                        <span class="card-title">Leave Applications</span>
+                        <div class="row">
+                            <span class="card-title col s4">Leave Information</span>
+                            <span class="col s2 offset-m6 pull-right">
+                                <a href="@Url.Action("Add", "LeaveApplication", new { })" class="btn btn-default btn-group-sm">New Leave</a>
+                            </span>
+                        </div>
                         <table id="leaveApplications" class="display responsive-table datatable-example">
                             <thead>
                                 <tr>
