--- a/TestHR.Web/Areas/Admin/Views/Holiday/Add.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Holiday/Add.cshtml
@@ -11,37 +11,43 @@
         </div>
         <div class="col s12">
             <div class="card">
-                <div class="card-content">
-                    <form id="example-form" method="post" action="/Admin/Holiday/Add">
+                @using (Html.BeginForm("Add", "Holiday",FormMethod.Post))
+                {
+                    @Html.ValidationSummary(true)
+                    <div class="card-content">
                         <span class="card-title">Holiday Settings</span><br>
                         <div class="row">
                             <div class="row">
                                 <div class="input-field col s6">
-                                    <input name="Name" id="icon_prefix" type="text" class="validate">
-                                    <label for="icon_prefix">Employee Name</label>
+                                    @Html.LabelFor(model => model.Name)
+                                    @Html.TextBoxFor(model => model.Name)
+                                    @Html.ValidationMessageFor(model=>model.Name)
                                 </div>
                                 <div class="input-field col s6">
-                                    <input name="Description" id="icon_prefix" type="text" class="validate">
-                                    <label for="icon_prefix">Description</label>
+                                    @Html.LabelFor(model => model.Description)
+                                    @Html.TextBoxFor(model => model.Description)
+                                    @Html.ValidationMessageFor(model => model.Description)
                                 </div>
                                 <div class="input-field col s6">
                                     <input id="DateFrom" name="DateFrom" type="text" class="validate datepicker">
                                     <label for="DateFrom">DateFrom</label>
+                                    @Html.ValidationMessageFor(model => model.DateFrom)
                                 </div>
                                 <div class="input-field col s6">
                                     <input id="DateTo" name="DateTo" type="date" class="validate datepicker">
                                     <label for="DateTo">DateTo</label>
+                                    @Html.ValidationMessageFor(model => model.DateTo)
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col s4 offset-m7 offset-m1">
                                 <input type="submit" class="btn btn-default green col s4 offset-m1" value="Save" />
-                                @Html.ActionLink("Cancel", "Index", "Holiday", null, new { @class = "btn btn-default red col s4 offset-m1" })
+                                @Html.ActionLink("Cancel", "Index", "Holiday", null, new {@class = "btn btn-default red col s4 offset-m1"})
                             </div>
                         </div>
-                    </form>
-                </div>
+                    </div>
+                }
             </div>
         </div>
     </div>
@@ -49,6 +55,7 @@
 
 @section scripts
 {
+    @Scripts.Render("~/bundles/jqueryval")
     <script type="text/javascript">
         $(document).ready(function () {
             $('.datepicker').pickadate({
