--- a/TestHR.Web/Areas/Admin/Views/Shift/Index.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Shift/Index.cshtml
@@ -14,6 +14,7 @@
                 <div class="card">
                     <div class="card-content">
                         <span class="card-title">Shift</span>
+                            <a href="@Url.Action("Add", "Shift", new { })" class="btn btn-default btn-group-sm">Add</a>
                         <table id="shiftList" class="display responsive-table datatable-example">
                             <thead>
                                 <tr>
