--- a/TestHR.Web/Views/Shared/_Layout.cshtml
+++ b/TestHR.Web/Views/Shared/_Layout.cshtml
@@ -518,18 +518,22 @@
                         </div>
                         <div class="sidebar-account-settings">
                             <ul>
-                                <li class="no-padding">
-                                    <a class="waves-effect waves-grey"><i class="material-icons">mail_outline</i>Inbox</a>
-                                </li>
-                                <li class="no-padding">
-                                    <a class="waves-effect waves-grey"><i class="material-icons">star_border</i>Starred<span class="new badge">18</span></a>
-                                </li>
-                                <li class="no-padding">
-                                    <a class="waves-effect waves-grey"><i class="material-icons">done</i>Sent Mail</a>
-                                </li>
-                                <li class="no-padding">
-                                    <a class="waves-effect waves-grey"><i class="material-icons">history</i>History<span class="new grey lighten-1 badge">3 new</span></a>
-                                </li>
+                                @if (User.IsInRole("Employee"))
+                                {
+                                    <li class="no-padding"><a class="waves-effect waves-grey" href="/Dashboard/Employee"><i class="material-icons">settings_input_svideo</i>Dashboard</a></li>
+                                    <li class="no-padding">
+                                        <a class="collapsible-header waves-effect waves-grey"><i class="material-icons">apps</i>Employee Center<i class="nav-drop-icon material-icons">keyboard_arrow_right</i></a>
+                                        <div class="collapsible-body">
+                                            <ul>
+                                                <li><a href="/Admin/Employee/Profile">Profile</a></li>
+
+                                            </ul>
+                                        </div>
+                                    </li>
+                                    <li class="no-padding"><a class="waves-effect waves-grey" href="/Admin/Attendance/Index"><i class="material-icons">star_border</i>Attendance</a></li>
+                                    <li class="no-padding"><a class="waves-effect waves-grey" href="/Admin/LeaveApplication/Index"><i class="material-icons">trending_up</i>Leave</a></li>
+                                }
+                             
                                 <li class="divider"></li>
                                 <li class="no-padding">
                                     <a class="waves-effect waves-grey" href="javascript:document.getElementById('logoutForm').submit()"><i class="material-icons">exit_to_app</i>Sign Out</a>
